k8s/sites/02-www-tobys-cloud.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: www-tobys-cloud
  namespace: sites
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: www-tobys-cloud
...

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-tobys-cloud
  namespace: sites
spec:
  selector:
    matchLabels:
      app: www-tobys-cloud
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: www-tobys-cloud
    spec:
      containers:
      - name: nginx
        image: ghcr.io/tlwr/www.tobys.cloud:24b12c521c5490c98fe1ea73564c04c436fa9086
        ports:
        - containerPort: 80
...
