k8s/sites/02-stats-tobys-cloud.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stats-tobys-cloud
  namespace: sites
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: stats-tobys-cloud
...

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-tobys-cloud
  namespace: sites
spec:
  selector:
    matchLabels:
      app: stats-tobys-cloud
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: stats-tobys-cloud
    spec:
      containers:
      - name: nginx
        image: ghcr.io/tlwr/stats.tobys.cloud:a22c78930a84255d9698a21473cb1291c465ecf7
        command: [/app/server]
        args:
          - -prometheus-url
          - https://grafana-cloud-remote.tlwr.workers.dev
          - -prometheus-basic-auth
          - $(PROM_BASIC_AUTH)
          - -prometheus-read-path
          - /api/prom
        ports:
        - containerPort: 8080
...

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stats-tobys-cloud
  namespace: sites
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: haproxy
  rules:
  - host: stats.tobys.cloud
    http:
      paths:
      - backend:
          service:
            name: stats-tobys-cloud
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - secretName: stats-tobys-cloud-tls
    hosts:
      - stats.tobys.cloud
...
