k8s/sites/02-www-toby-codes.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: www-toby-codes
  namespace: sites
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: www-toby-codes
...

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-toby-codes
  namespace: sites
spec:
  selector:
    matchLabels:
      app: www-toby-codes
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: www-toby-codes
    spec:
      containers:
      - name: app
        image: ghcr.io/tlwr/www.toby.codes:fe7d86fb20dc3c7046c64a8107ce98cb7d5c4c35
        ports:
        - containerPort: 8080
...

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-toby-codes
  namespace: sites
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: haproxy
  rules:
  - host: www.toby.codes
    http:
      paths:
      - backend:
          service:
            name: www-toby-codes
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: codes.metal.tobys.cloud
    http:
      paths:
      - backend:
          service:
            name: www-toby-codes
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - secretName: www-toby-codes-tls
    hosts:
      - www.toby.codes
  - secretName: codes-metal-tobys-cloud-tls
    hosts:
      - codes.metal.tobys.cloud
...
