k8s/sites/page-404.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: page-404
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: page-404
...

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: page-404
spec:
  selector:
    matchLabels:
      app: page-404
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: page-404
    spec:
      containers:
      - name: app
        image: ghcr.io/tlwr/page-404:a22c78930a84255d9698a21473cb1291c465ecf7
        ports:
        - containerPort: 8080
...

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: page-404
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: haproxy
  rules:
  - host: '*.tobys.cloud'
    http:
      paths:
      - backend:
          service:
            name: page-404
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: '*.toby.codes'
    http:
      paths:
      - backend:
          service:
            name: page-404
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - secretName: page-404-tls
    hosts:
      - '*.tobys.cloud'
      - '*.toby.codes'
...
