k8s/sites/www-toby-codes.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: www-toby-codes
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: www-toby-codes
...

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-toby-codes
spec:
  selector:
    matchLabels:
      app: www-toby-codes
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: www-toby-codes
    spec:
      containers:
        - name: app
          image: ghcr.io/tlwr/www.toby.codes:latest
          ports:
            - containerPort: 8080
...
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-toby-codes
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: haproxy
  rules:
    - host: www.toby.codes
      http:
        paths:
          - backend:
              service:
                name: www-toby-codes
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: toby.codes
      http:
        paths:
          - backend:
              service:
                name: www-toby-codes
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - secretName: www-toby-codes-tls
      hosts:
        - www.toby.codes
        - toby.codes
