k8s/sites/www-tobys-cloud.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-tobys-cloud
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    haproxy.org/request-redirect: "https://www.toby.codes"
spec:
  ingressClassName: haproxy
  rules:
    - host: www.tobys.cloud
      http:
        paths:
        - backend:
            service:
              name: www-toby-codes
              port:
                number: 80
          path: /
          pathType: Prefix

    - host: tobys.cloud
      http:
        paths:
        - backend:
            service:
              name: www-toby-codes
              port:
                number: 80
          path: /
          pathType: Prefix
  tls:
    - secretName: www-tobys-cloud-tls
      hosts:
        - tobys.cloud
        - www.tobys.cloud
...
